--- a/images/webserver/conf/httpd.conf
+++ b/images/webserver/conf/httpd.conf
@@ -9,7 +9,7 @@
 #
 # Do NOT simply read the instructions in here without understanding
 # what they do.  They're here only as hints or reminders.  If you are unsure
-# consult the online docs. You have been warned.  
+# consult the online docs. You have been warned.
 #
 # The configuration directives are grouped into three basic sections:
 #  1. Directives that control the operation of the Apache server process as a
@@ -119,7 +119,7 @@ MaxRequestsPerChild  4000
 StartServers         4
 MaxClients         300
 MinSpareThreads     25
-MaxSpareThreads     75 
+MaxSpareThreads     75
 ThreadsPerChild     25
 MaxRequestsPerChild  0
 </IfModule>
@@ -129,11 +129,13 @@ MaxRequestsPerChild  0
 # ports, in addition to the default. See also the <VirtualHost>
 # directive.
 #
-# Change this to Listen on specific IP addresses as shown below to 
+# Change this to Listen on specific IP addresses as shown below to
 # prevent Apache from glomming onto all bound IP addresses (0.0.0.0)
 #
 #Listen 12.34.56.78:80
 Listen 80
+Listen 443
+Listen 8000
 
 #
 # Dynamic Shared Object (DSO) Support
@@ -989,7 +991,7 @@ BrowserMatch "^Dreamweaver-WebDAV-SCM1" redirect-carefully
 #
 #NameVirtualHost *:80
 #
-# NOTE: NameVirtualHost cannot be used without a port specifier 
+# NOTE: NameVirtualHost cannot be used without a port specifier
 # (e.g. :80) if mod_ssl is being used, due to the nature of the
 # SSL protocol.
 #
@@ -1000,8 +1002,7 @@ BrowserMatch "^Dreamweaver-WebDAV-SCM1" redirect-carefully
 # The first VirtualHost section is used for requests without a known
 # server name.
 #
-<VirtualHost *:80>
-    #ServerAdmin webmaster@dummy-host.example.com
+<VirtualHost *:8000>
     ServerName webserver.cluster
     DocumentRoot /var/www/webserver.cluster/public_html/
     ErrorLog /var/www/webserver.cluster/error.log
@@ -1016,4 +1017,37 @@ BrowserMatch "^Dreamweaver-WebDAV-SCM1" redirect-carefully
 	KrbMethodK5Passwd On
 	require valid-user
     </Location>
+</VirtualHost>
+
+<VirtualHost *:443>
+    ServerName webserver.cluster
+    DocumentRoot /var/www/webserver.cluster/public_html
+    ErrorLog /var/www/webserver.cluster/ssl_error.log
+    CustomLog /var/www/webserver.cluster/ssl_requests.log combined
+    SSLEngine on
+    SSLCertificateFile /etc/ssl/certs/selfsigned.crt
+    SSLCertificateKeyFile /etc/ssl/private/private.key
+
+    ProxyPass / http://service.cluster:8000/
+    ProxyPassReverse / http://service.cluster:8000/
+</VirtualHost>
+
+<VirtualHost *:80>
+    ServerName webserver.cluster
+    DocumentRoot /var/www/webserver.cluster/public_html/
+    ErrorLog /var/www/webserver.cluster/error.log
+    CustomLog /var/www/webserver.cluster/requests.log common
+    <Location />
+        AuthType Kerberos
+	AuthName "Kerberos authenticated intranet"
+	KrbAuthRealms CLUSTER
+	KrbServiceName HTTP
+	Krb5Keytab /etc/clusterdock/kerberos/service.keytab
+	KrbMethodNegotiate On
+	KrbMethodK5Passwd On
+	require valid-user
+    </Location>
+
+    ProxyPass / http://service.cluster:8000/
+    ProxyPassReverse / http://service.cluster:8000/
 </VirtualHost>
